testsuite/tests/indexed-types/should_fail/NotRelaxedExamples.stderr

NotRelaxedExamples.hs:9:15: error:
    • Illegal nested type family application ‘F1 (F1 Char)’
      (Use UndecidableInstances to permit this)
    • In the type instance declaration for ‘F1’

NotRelaxedExamples.hs:10:15: error:
    • The type family application ‘F2 [x]’
        is no smaller than the instance head
      (Use UndecidableInstances to permit this)
    • In the type instance declaration for ‘F2’

NotRelaxedExamples.hs:11:15: error:
    • The type family application ‘F3 [Char]’
        is no smaller than the instance head
      (Use UndecidableInstances to permit this)
    • In the type instance declaration for ‘F3’
